Fix twill error.

--- a/karl/twilltests/fixtures/karl.ini
+++ b/karl/twilltests/fixtures/karl.ini
@@ -24,6 +24,7 @@ selectable_groups =
     group.KarlAdmin
 
 logo_path = custom/logo.png
+envelope_from_addr = from@example.com
 
 # for the mailin_monitor utility
 #pending_db_path=/path/to/Maildir/pending.db
