Upgrade processing of css files as well - clean-css is capable of recursively reloading @imports as needed for us - however due to a bug in url rebasing, the min.css files have to  be moved from static/min to static. It would be better if they are in /min, so occasinally this could be reverted.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 karl/views/static/min/** -diff
+# the followings are also productions,
+# but currently they cannoy go under min/ :
+karl/views/static/karl-multifileupload.min.css -diff
+karl/views/static/karl-ui.min.css -diff
+karl/views/static/karl-wikitoc.min.css -diff
+karl/views/static/tinymce/tinymce-3.5.2.karl.min.js -diff
