--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gulp-concat": "*",
         "gulp-uglify": "*",
         "gulp-header": "*",
+        "clean-css": "git://github.com/jakubpawlowicz/clean-css#master",
         "gulp-minify-css": "*",
         "gulp-rename": "*"
     }
