Fix tinymce resources

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,4 @@ karl/views/static/min/** -diff
 karl/views/static/karl-multifileupload.min.css -diff
 karl/views/static/karl-ui.min.css -diff
 karl/views/static/karl-wikitoc.min.css -diff
-karl/views/static/tinymce/tinymce-3.5.2.karl.min.js -diff
+karl/views/static/tinymce/tinymce-3.5.2.karl.min.css -diff
