Add new minimized css to gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ karl/views/static/karl-multifileupload.min.css -diff
 karl/views/static/karl-ui.min.css -diff
 karl/views/static/karl-wikitoc.min.css -diff
 karl/views/static/tinymce/tinymce-3.5.2.karl.min.css -diff
+karl/views/static/karl-custom.min.css -diff
