Add private property to package.json to shut it up about a missing README.md.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "karl",
+  "private": true,
   "version": "0.0.0",
   "description": "karl frontend",
   "repository": {
     "type": "git",
     "url": "ssh://git@github.com:karlproject/karl.git"
   },
-  "README": "",
   "devDependencies": {
     "gulp": "*",
     "gulp-concat": "*",
