--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
     "url": "ssh://git@github.com:karlproject/karl.git"
   },
   "devDependencies": {
+    "lodash": "*",
+    "napa": "^0.4.1",
+    "karma": "*",
+    "karma-mocha": "*",
+    "karma-chai": "*",
+    "karma-jasmine": "*",
+    "karma-junit-reporter": "*",
+    "karma-chrome-launcher": "*",
+    "karma-safari-launcher": "*",
+    "karma-firefox-launcher": "*",
+    "karma-detect-browsers": "*",
+    "karma-browserstack-launcher": "*",
+    "karma-phantomjs-launcher": "*",
+    "jasmine-reporters": "~0.2.1",
     "gulp": "*",
     "gulp-concat": "*",
     "gulp-header": "*",
