--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "ssh://git@github.com:karlproject/karl.git"
   },
+  "private": true,
   "devDependencies": {
     "lodash": "*",
     "napa": "^0.4.1",
