--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "chai": "*",
     "chai-as-promised": "*",
     "chromedriver": "*",
-    "selenium-standalone": ">= 2.43, <= 2.44",
+    "selenium-standalone": "~2.44.0",
     "multi-glob": "*",
     "selenium-html-js-converter": "*"
   },
