Add a default gulp target that will start up a basic livereload proxy

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multi-glob": "*",
     "selenium-html-js-converter": "*",
     "gulp-remove-use-strict": "*",
-    "gulp-sourcemaps": "*"
+    "gulp-sourcemaps": "*",
+    "browser-sync": "*"
   },
   "scripts": {
     "install": "napa",
