Further cleanup, install json2 from npm

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "selenium-html-js-converter": "*",
     "gulp-remove-use-strict": "*",
     "gulp-sourcemaps": "*",
-    "browser-sync": "*"
+    "browser-sync": "*",
+    "json2": "*"
   },
   "scripts": {
     "install": "napa",
