--- a/setup.cfg
+++ b/setup.cfg
@@ -5,5 +5,5 @@ cover-erase = 1
 
 [easy_install]
 zip_ok = false
-index_url = http://dist.repoze.org/lemonade/testing/simple
+#index_url = http://dist.repoze.org/lemonade/testing/simple
 
