--- a/versions.cfg
+++ b/versions.cfg
@@ -1,7 +1,7 @@
 [versions]
 
 # Added by buildout at 2017-01-10 10:14:41.656848
-BTrees = 4.4.0
+BTrees = 4.3.2
 Chameleon = 2.8.2
 Jinja2 = 2.6
 Mako = 0.4.2
@@ -27,7 +27,7 @@ mr.developer = 1.21
 nose = 1.3.7
 osi = 4.3.1
 pbr = 1.7.0
-#persistent = 4.2.2
+persistent = 4.2.2
 pyasn1 = 0.1.9
 pyramid = 1.2.1
 pyramid-debugtoolbar = 1.0.2
@@ -51,7 +51,7 @@ validatish = 0.6.4
 venusian = 1.0a1
 waitress = 0.8.9
 z3c.recipe.mkdir = 0.3.1
-zc.buildout = 2.5.2
+zc.buildout = 2.9.1
 zc.recipe.egg = 2.0.2
 zodbpickle = 0.6.0
 zope.component = 3.6.0
@@ -112,7 +112,7 @@ cffi = 1.4.1
 
 # Required by:
 # pyramid-jwtauth==0.1.3+agendaless
-cryptography = 1.2.3
+cryptography = 1.7.2
 
 # Required by:
 # repoze.errorlog==0.7
@@ -257,7 +257,7 @@ requests = 2.4.3
 
 # Required by:
 # mr.developer==1.21
-setuptools = 31.0.0
+setuptools = 3.4.1
 
 # Required by:
 # convertish==0.5.5
@@ -363,5 +363,28 @@ zope.schema = 3.5.4
 # repozitory==1.3
 zope.sqlalchemy = 0.6.1
 
-# Added by buildout at 2017-01-13 20:30:53.004782
-persistent = 4.2.2
+# Required by:
+# pysaml2==4.4.0
+decorator = 4.0.11
+
+# Required by:
+# pysaml2==4.4.0
+future = 0.16.0
+
+# Required by:
+# pysaml2==4.4.0
+pyOpenSSL = 16.2.0
+
+# Required by:
+# pysaml2==4.4.0
+pycryptodomex = 3.4.3
+
+# Required by:
+# karl==4.25.1
+pysaml2 = 4.4.0
+
+# Required by:
+# pysaml2==4.4.0
+pytz = 2016.10
+
+PyYAML = 3.12
