use newer ZODB, RelStorage and transaction.
Newer ZODB is needed to help fix the idle-in-transaction problem.

Newer RelStorage gets prepared statements which speeds upo many things.

--- a/versions.cfg
+++ b/versions.cfg
@@ -8,7 +8,7 @@ Mako = 0.4.2
 MarkupSafe = 0.15
 PasteScript = 1.7.4.1
 ProxyTypes = 0.9
-RelStorage = 2.0.0rc1
+RelStorage = 2.1a1
 SQLAlchemy = 1.0.12
 Sphinx = 1.1.2
 ZEO = 5.0.4
@@ -51,7 +51,6 @@ validatish = 0.6.4
 venusian = 1.0a1
 waitress = 0.8.9
 z3c.recipe.mkdir = 0.3.1
-zc.buildout = 2.9.1
 zc.recipe.egg = 2.0.2
 zodbpickle = 0.6.0
 zope.component = 3.6.0
@@ -90,7 +89,6 @@ ZConfig = 2.5.1
 
 # Required by:
 # j1m.relstoragejsonsearch==0.2.1
-ZODB = 5.1.1
 
 # Required by:
 # karl==4.25.1
@@ -256,10 +254,6 @@ repoze.zodbconn = 0.14
 requests = 2.4.3
 
 # Required by:
-# mr.developer==1.21
-setuptools = 34.3.1
-
-# Required by:
 # convertish==0.5.5
 # dottedish==0.6
 simplegeneric = 0.6
@@ -282,7 +276,6 @@ threadframe = 0.2
 # ZODB3==3.11.0
 # repoze.pgtextindex==1.4
 # zope.sqlalchemy==0.6.1
-transaction = 2.0.3
 
 # Required by:
 # pyramid==1.2.1
@@ -388,3 +381,15 @@ pysaml2 = 4.4.0
 pytz = 2016.10
 
 PyYAML = 3.12
+
+# Added by buildout at 2017-03-27 14:31:06.702444
+
+# Required by:
+# j1m.relstoragejsonsearch==0.2.2
+ZODB = 5.2.0
+
+# Required by:
+# ZODB3==3.11.0
+# repoze.pgtextindex==1.4
+# zope.sqlalchemy==0.6.1
+transaction = 2.1.2
