Add a monkey patch to get rid of connections that are idle in transaction when closed

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -68,3 +68,7 @@ eggs =
     j1m.relstoragejsonsearch
 dependent-scripts = true
 interpreter = py
+initialization =
+  import relstorage.storage
+  relstorage.storage.RelStorage.afterCompletion = (
+    relstorage.storage.RelStorage._rollback_load_connection)
