Added repose.vhm and version pins

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,6 +66,7 @@ eggs =
     waitress
     repoze.profile
     j1m.relstoragejsonsearch
+    repoze.vhm
 dependent-scripts = true
 interpreter = py
 initialization =
