--- a/versions.cfg
+++ b/versions.cfg
@@ -403,3 +403,6 @@ python-slugify = 1.2.1
 
 # Added by buildout at 2017-03-28 19:05:42.125562
 repoze.vhm = 0.14
+
+# Added by buildout at 2017-03-31 10:38:33.809666
+zc.buildout = 2.9.3
